0.3.2/_sources/content/getting_started/installation.rst.txt
.. _installation-reference:

Installation
============

Software Development Kit
------------------------

The Software Development Kit is available as a
`pip package <https://pypi.org/project/va-mvi/>`_, that can be downloaded by anyone
and comes packed with the Command-Line Interface. In your terminal of choice,
install MVI with:

>>> pip install va-mvi

Check your installation by running: ``mvi --help`` in a terminal.

The Manager
-----------

To install the Manager, you first have to have `Docker <https://docs.docker.com/>`_
installed.

Given a `manager.tar` file, install it by calling::

    docker load -i path/to/manager.tar
    docker volume create mvi_data
    docker run --name mvi_manager -v /var/run/docker.sock:/var/run/docker.sock -v mvi_data:/data -p 80:80 -p 443:443 -e MVI_HOST_NAME="your-host-name" -e MVI_AUTH_ENABLED=True -d vikinganalyticsab/mvi_manager:latest

Where you change ``"your-host-name"`` to the URL or ip-adress you have for that
machine or ``"localhost"`` if running locally.

License Activation
^^^^^^^^^^^^^^^^^^

Starting the Manager according to above will give you a short-lived trial instance that
you can use without restrictions up to 12 hours. In order to use the Manager for
continuously running applications you will need to activate it using an Activation Key.

To activate the Manager with an Activation Key, start it by adding the following flag
to the above `docker run` command::

    docker run --name mvi_manager ... -e MVI_ACTIVATION_KEY="your activation key" ... -d vikinganalyticsab/mvi_manager:latest

To get an Activation Key, please contact Viking Analytics.